--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,9 @@
   user-select: none;
 }
 
-/* Generic */
 body {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,77 +15,24 @@ body {
   font-size: 12px;
   background-color: #ecf0f3;
   color: #a0a5a8;
+  margin: 0;
 }
 
-/**/
 .main {
   position: relative;
-  width: 1000px;
-  min-width: 1000px;
-  min-height: 600px;
-  height: 600px;
+  width: 90%; /* Ajusta el ancho del contenedor principal */
+  max-width: 1200px; /* Ancho máximo del contenedor */
+  height: auto;
   padding: 25px;
   background-color: #ecf0f3;
   box-shadow: 10px 10px 10px #d1d9e6, -10px -10px 10px #f9f9f9;
   border-radius: 12px;
   overflow: hidden;
 }
-@media (max-width: 1200px) {
-  .main {
-    transform: scale(0.7);
-  }
-}
-@media (max-width: 1000px) {
-  .main {
-    transform: scale(0.6);
-  }
-}
-@media (max-width: 800px) {
-  .main {
-    transform: scale(0.5);
-  }
-}
-@media (max-width: 600px) {
-  .main {
-    transform: scale(0.4);
-  }
-}
 
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  top: 0;
-  width: 600px;
-  height: 100%;
-  padding: 25px;
-  background-color: #ecf0f3;
-  transition: 1.25s;
-}
-
-.form {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-}
-.form__icon {
-  object-fit: contain;
-  width: 30px;
-  margin: 0 5px;
-  opacity: 0.5;
-  transition: 0.15s;
-}
-.form__icon:hover {
-  opacity: 1;
-  transition: 0.15s;
-  cursor: pointer;
-}
 .form__input {
-  width: 350px;
+  width: 100%;
+  max-width: 350px;
   height: 40px;
   margin: 4px 0;
   padding-left: 25px;
@@ -100,13 +46,32 @@ body {
   border-radius: 8px;
   box-shadow: inset 2px 2px 4px #d1d9e6, inset -2px -2px 4px #f9f9f9;
 }
-.form__input:focus {
-  box-shadow: inset 4px 4px 4px #d1d9e6, inset -4px -4px 4px #f9f9f9;
+
+.form__icon {
+  object-fit: contain;
+  width: 30px;
+  margin: 0 5px;
+  opacity: 0.5;
+  transition: 0.15s;
 }
+
+.form__icon:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 .form__span {
   margin-top: 30px;
   margin-bottom: 12px;
 }
+
 .form__link {
   color: #181818;
   font-size: 15px;
@@ -144,108 +109,46 @@ body {
   outline: none;
 }
 
-/**/
 .a-container {
   z-index: 100;
-  left: calc(100% - 600px );
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .b-container {
-  left: calc(100% - 600px );
   z-index: 0;
 }
 
-.switch {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 400px;
-  padding: 50px;
-  z-index: 200;
-  transition: 1.25s;
-  background-color: #ecf0f3;
-  overflow: hidden;
-  box-shadow: 4px 4px 10px #d1d9e6, -4px -4px 10px #f9f9f9;
-}
-.switch__circle {
-  position: absolute;
-  width: 500px;
-  height: 500px;
-  border-radius: 50%;
-  background-color: #ecf0f3;
-  box-shadow: inset 8px 8px 12px #d1d9e6, inset -8px -8px 12px #f9f9f9;
-  bottom: -60%;
-  left: -60%;
-  transition: 1.25s;
-}
-.switch__circle--t {
-  top: -30%;
-  left: 60%;
-  width: 300px;
-  height: 300px;
-}
-.switch__container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  position: absolute;
-  width: 400px;
-  padding: 50px 55px;
-  transition: 1.25s;
-}
-.switch__button {
-  cursor: pointer;
-}
-.switch__button:hover {
-  box-shadow: 6px 6px 10px #d1d9e6, -6px -6px 10px #f9f9f9;
-  transform: scale(0.985);
-  transition: 0.25s;
-}
-.switch__button:active, .switch__button:focus {
-  box-shadow: 2px 2px 6px #d1d9e6, -2px -2px 6px #f9f9f9;
-  transform: scale(0.97);
-  transition: 0.25s;
-}
-
-/**/
-.is-txr {
-  left: calc(100% - 400px );
-  transition: 1.25s;
-  transform-origin: left;
-}
-
-.is-txl {
-  left: 0;
-  transition: 1.25s;
-  transform-origin: right;
-}
-
-.is-z200 {
-  z-index: 200;
-  transition: 1.25s;
-}
-
-.is-hidden {
-  visibility: hidden;
-  opacity: 0;
-  position: absolute;
-  transition: 1.25s;
-}
-
-.is-gx {
-  animation: is-gx 1.25s;
-}
-
-@keyframes is-gx {
-  0%, 10%, 100% {
-    width: 400px;
+@media (max-width: 1200px) {
+  .main {
+    transform: scale(0.9);
   }
-  30%, 50% {
-    width: 500px;
+}
+
+@media (max-width: 1000px) {
+  .main {
+    transform: scale(0.8);
+  }
+}
+
+@media (max-width: 800px) {
+  .main {
+    transform: scale(0.7);
+  }
+}
+
+@media (max-width: 600px) {
+  .main {
+    transform: scale(0.6);
+  }
+
+  .form__input {
+    width: 100%;
+    max-width: 300px;
+  }
+
+  .title {
+    font-size: 28px;
   }
 }
