--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,10 @@
 }
 
 body {
+  margin: 0;
+  padding: 0;
   width: 100%;
-  height: 100%;
+  min-height: 100vh; 
   display: flex;
   justify-content: center;
   align-items: center;
@@ -15,14 +17,14 @@ body {
   font-size: 12px;
   background-color: #ecf0f3;
   color: #a0a5a8;
-  margin: 0;
 }
 
 .main {
   position: relative;
-  width: 90%; /* Ajusta el ancho del contenedor principal */
-  max-width: 1200px; /* Ancho máximo del contenedor */
-  height: auto;
+  width: 90%; 
+  max-width: 1200px;
+  min-height: 400px;
+  height: auto; 
   padding: 25px;
   background-color: #ecf0f3;
   box-shadow: 10px 10px 10px #d1d9e6, -10px -10px 10px #f9f9f9;
@@ -32,9 +34,9 @@ body {
 
 .form__input {
   width: 100%;
-  max-width: 350px;
+  max-width: 350px; 
   height: 40px;
-  margin: 4px 0;
+  margin: 7px 0;
   padding-left: 25px;
   font-size: 13px;
   letter-spacing: 0.15px;
@@ -49,15 +51,18 @@ body {
 
 .form__icon {
   object-fit: contain;
-  width: 30px;
-  margin: 0 5px;
+  width: 20px;
+  margin: 0.5px;
   opacity: 0.5;
   transition: 0.15s;
 }
 
-.form__icon:hover {
-  opacity: 1;
-  cursor: pointer;
+
+.title {
+  margin-top: 40px;
+  font-size: 24px;
+  line-height: 2.5;
+  color: #181818;
 }
 
 .form {
@@ -68,40 +73,22 @@ body {
 }
 
 .form__span {
-  margin-top: 30px;
-  margin-bottom: 12px;
+  margin-top: 15px; /* Ajustar el margen superior para dispositivos móviles */
+  margin-bottom: 8px;
 }
 
 .form__link {
-  color: #181818;
-  font-size: 15px;
-  margin-top: 25px;
-  border-bottom: 1px solid #a0a5a8;
-  line-height: 2;
-}
-
-.title {
-  font-size: 34px;
-  font-weight: 700;
-  line-height: 3;
-  color: #181818;
-}
-
-.description {
-  font-size: 14px;
-  letter-spacing: 0.25px;
-  text-align: center;
-  line-height: 1.6;
+  font-size: 12px;
+  margin-top: 10px; /* Ajustar el margen superior para dispositivos móviles */
 }
 
 .button {
-  width: 180px;
-  height: 50px;
-  border-radius: 25px;
-  margin-top: 50px;
-  font-weight: 700;
-  font-size: 14px;
-  letter-spacing: 1.15px;
+  width: 150px;
+  height: 40px;
+  border-radius: 20px;
+  margin-top: 20px; 
+  font-size: 12px;
+  letter-spacing: 1px;
   background-color: #4B70E2;
   color: #f9f9f9;
   box-shadow: 8px 8px 16px #d1d9e6, -8px -8px 16px #f9f9f9;
@@ -141,14 +128,5 @@ body {
 @media (max-width: 600px) {
   .main {
     transform: scale(0.6);
-  }
-
-  .form__input {
-    width: 100%;
-    max-width: 300px;
-  }
-
-  .title {
-    font-size: 28px;
   }
 }
