--- a/LoginAdmin/css/main.css
+++ b/LoginAdmin/css/main.css
@@ -476,8 +476,12 @@ iframe {
 } 
 
 .center-image {
-  display: block;
-  margin: 0 auto;
-  max-width: 100%;
+  max-width: 50%;
   height: auto;
+}
+
+.image-container {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
 }
