--- a/stylesmister2.css
+++ b/stylesmister2.css
@@ -309,8 +309,8 @@
   }
 
 .button:hover {
-  background-color: rgb(226, 10, 201);
-  box-shadow: 0px 15px 20px rgba(226, 1, 200, 0.442);
+  background-color: rgb(56, 200, 228);
+  box-shadow: 0px 15px 20px rgba(56, 199, 228, 0.524);;
   color: #fff;
   transform: translateY(-7px);
 }
